# tetris

./: Doxyfile  Makefile.am  Makefile.in  README.md  build.sh  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
docs/html/: annotated.html  classes.html  dir_40988668acd171a89cddbb9743a487a4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  gfx_8h_source.html  index.html  input_8h_source.html  md_README.html  pages.html  structBoard-members.html  structBoard.html  structGame-members.html  structGame.html  structGfx-members.html  structGfx.html  structShape-members.html  structShape.html  tetris_8h_source.html  todo.html
docs/html/search/: all_3.js  all_4.js  classes_1.js  searchdata.js  variables_0.js
docs/latex/: annotated.tex  index.tex  md_README.tex  refman.tex  structBoard.tex  structGame.tex  structGfx.tex  structShape.tex  todo.tex
src/: Makefile  mainpage.dox  tetris.c  tetris.h  tetron.c  tetron.h
src/sdl/: gfx.c  gfx.h  input.c  input.h  sys.c  sys.h
